{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 179,
  "lineage": "db8baf40-70dc-b171-4d14-000e49946d19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b49a24cfb95941c",
            "arn": "arn:aws:ec2:ap-south-1:014498660231:instance/i-0e02671989b7420d8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "example-instance-profile",
            "id": "i-0e02671989b7420d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016e5ea6fff134ff6",
            "private_dns": "ip-10-0-1-107.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "15.207.84.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031abfab9c0f7af7e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00ad2a015817997ee"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a50e14333fcbb79",
            "tags": {
              "Name": "terraform-jenkins"
            },
            "tags_all": {
              "Name": "terraform-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ad2a015817997ee"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_iam_role.terraform",
            "aws_security_group.Demo-sg",
            "aws_subnet.Demo-subnet",
            "aws_vpc.Demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Demo-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498660231:internet-gateway/igw-0c0337ea0d12604ee",
            "id": "igw-0c0337ea0d12604ee",
            "owner_id": "014498660231",
            "tags": {
              "Name": "Demo-gw"
            },
            "tags_all": {
              "Name": "Demo-gw"
            },
            "vpc_id": "vpc-02bb073c7388659ff"
          },
          "dependencies": [
            "aws_vpc.Demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498660231:route-table/rtb-0a1b2f4f03b80e32b",
            "id": "rtb-0a1b2f4f03b80e32b",
            "owner_id": "014498660231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0337ea0d12604ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Demo-rt"
            },
            "tags_all": {
              "Name": "Demo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb073c7388659ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Demo-gw",
            "aws_vpc.Demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7aab30590740167",
            "route_table_id": "rtb-0a1b2f4f03b80e32b",
            "subnet_id": "subnet-05a50e14333fcbb79"
          },
          "dependencies": [
            "aws_internet_gateway.Demo-gw",
            "aws_route_table.Demo-rt",
            "aws_subnet.Demo-subnet",
            "aws_vpc.Demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498660231:security-group/sg-00ad2a015817997ee",
            "description": "Demo-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ad2a015817997ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Demo-sg",
            "name_prefix": "",
            "owner_id": "014498660231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Demo-sg"
            },
            "tags_all": {
              "Name": "Demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb073c7388659ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498660231:subnet/subnet-05a50e14333fcbb79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a50e14333fcbb79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014498660231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Demo-subnet"
            },
            "tags_all": {
              "Name": "Demo-subnet"
            },
            "vpc_id": "vpc-02bb073c7388659ff"
          },
          "dependencies": [
            "aws_vpc.Demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498660231:vpc/vpc-02bb073c7388659ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00373e273f7c2564b",
            "default_route_table_id": "rtb-0901c432f7ad4a7ba",
            "default_security_group_id": "sg-0bff8a953424ddd51",
            "dhcp_options_id": "dopt-0346c7fc0f651186c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bb073c7388659ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0901c432f7ad4a7ba",
            "owner_id": "014498660231"
          }
        }
      ]
    }
  ]
}